Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1855,11 +1855,11 @@
   "pli-tv-kd13:36.2.57": "Thinking that he’s on probation, he commits a number of offenses entailing suspension, both concealed and unconcealed and specified. ",
   "pli-tv-kd13:36.2.58": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.2.59": "He considers all this ",
-  "pli-tv-kd13:36.2.69": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
-  "pli-tv-kd13:36.2.70": "He asks to be sent back to the beginning like this, ",
-  "pli-tv-kd13:36.2.71": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.2.72": "He’s purified from those offenses. ",
-  "pli-tv-kd13:36.3.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
+  "pli-tv-kd13:36.2.69": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses. The procedure must be legitimate, irreversible, and fit to stand. The simultaneous probation, the trial period, and the rehabilitation must all be legitimate.’ ",
+  "pli-tv-kd13:36.2.70": "He asks the Sangha to be sent back to the beginning in this way, ",
+  "pli-tv-kd13:36.2.71": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, the trial period, and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.2.72": "He’s purified of those offenses. ",
+  "pli-tv-kd13:36.3.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
   "pli-tv-kd13:36.3.2": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.3.3": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.3.4": "which he gets. ",
