Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1860,11 +1860,11 @@
   "pli-tv-kd13:36.2.71": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, the trial period, and the rehabilitation legitimately. ",
   "pli-tv-kd13:36.2.72": "He’s purified of those offenses. ",
   "pli-tv-kd13:36.3.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
-  "pli-tv-kd13:36.3.2": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.3.2": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.3.3": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.3.4": "which he gets. ",
-  "pli-tv-kd13:36.3.5": "While on probation, he commits a number of offenses entailing suspension—unspecified and unconcealed … ",
-  "pli-tv-kd13:36.3.6": "unspecified and concealed … ",
+  "pli-tv-kd13:36.3.5": "While on probation, he commits a number of offenses entailing suspension, unconcealed and unspecified … ",
+  "pli-tv-kd13:36.3.6": "concealed and unspecified … ",
   "pli-tv-kd13:36.3.7": "unspecified and both concealed and unconcealed … ",
   "pli-tv-kd13:36.3.8": "unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.3.9": "He asks the Sangha to send him back to the beginning for those offenses, ",
