--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1865,10 +1865,10 @@
   "pli-tv-kd13:36.3.4": "which he gets. ",
   "pli-tv-kd13:36.3.5": "While on probation, he commits a number of offenses entailing suspension, unconcealed and unspecified … ",
   "pli-tv-kd13:36.3.6": "concealed and unspecified … ",
-  "pli-tv-kd13:36.3.7": "unspecified and both concealed and unconcealed … ",
+  "pli-tv-kd13:36.3.7": "both concealed and unconcealed and unspecified … ",
   "pli-tv-kd13:36.3.8": "unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.3.9": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.3.10": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
+  "pli-tv-kd13:36.3.10": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.3.11": "Thinking that he’s on probation … ",
   "pli-tv-kd13:36.3.12": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
   "pli-tv-kd13:36.3.13": "He’s purified from those offenses. ",
