--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1870,10 +1870,10 @@
   "pli-tv-kd13:36.3.9": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.3.10": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
   "pli-tv-kd13:36.3.11": "Thinking that he’s on probation … ",
-  "pli-tv-kd13:36.3.12": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.3.13": "He’s purified from those offenses. ",
-  "pli-tv-kd13:36.4.1": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.4.2": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.3.12": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation, the trial period, and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.3.13": "He’s purified of those offenses. ",
+  "pli-tv-kd13:36.4.1": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.4.2": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.4.3": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.4.4": "which he gets. ",
   "pli-tv-kd13:36.4.5": "While on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
