--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1876,10 +1876,10 @@
   "pli-tv-kd13:36.4.2": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.4.3": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.4.4": "which he gets. ",
-  "pli-tv-kd13:36.4.5": "While on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
+  "pli-tv-kd13:36.4.5": "While on probation, he commits a number of offenses entailing suspension, concealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.6": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.4.7": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.4.8": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
+  "pli-tv-kd13:36.4.7": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately. ",
+  "pli-tv-kd13:36.4.8": "Thinking that he’s on probation, he commits a number of offenses entailing suspension, concealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.9": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.4.10": "He considers all this ",
   "pli-tv-kd13:36.4.20": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
