--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1883,7 +1883,7 @@
   "pli-tv-kd13:36.4.9": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.4.10": "He considers all this ",
   "pli-tv-kd13:36.4.20": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses. The procedure must be legitimate, irreversible, and fit to stand. The simultaneous probation, the trial period, and the rehabilitation must all be legitimate.’ ",
-  "pli-tv-kd13:36.4.21": "He asks to be sent back to the beginning like this, ",
+  "pli-tv-kd13:36.4.21": "He asks to be sent back to the beginning in this way, ",
   "pli-tv-kd13:36.4.22": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
   "pli-tv-kd13:36.4.23": "He’s purified from those offenses. ",
   "pli-tv-kd13:36.4.24": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
