--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1896,10 +1896,10 @@
   "pli-tv-kd13:36.4.31": "Thinking that he’s on probation, he commits a number of offenses entailing suspension, both concealed and unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.32": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.4.33": "He considers all this ",
-  "pli-tv-kd13:36.4.43": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
-  "pli-tv-kd13:36.4.44": "He asks to be sent back to the beginning like this, ",
-  "pli-tv-kd13:36.4.45": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
-  "pli-tv-kd13:36.4.46": "He’s purified from those offenses.” ",
+  "pli-tv-kd13:36.4.43": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses. The procedure must be legitimate, irreversible, and fit to stand. The simultaneous probation, the trial period, and the rehabilitation must all be legitimate.’ ",
+  "pli-tv-kd13:36.4.44": "He asks to be sent back to the beginning in this way, ",
+  "pli-tv-kd13:36.4.45": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation, the trial period, and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.4.46": "He’s purified of those offenses.” ",
   "pli-tv-kd13:36.4.47": "The third group of nine is finished. ",
   "pli-tv-kd13:36.4.48": "The third chapter containing the collection of processes for the clearing of offenses entailing suspension is finished. ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
