Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1901,7 +1901,9 @@
   "pli-tv-kd13:36.4.45": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation, the trial period, and the rehabilitation legitimately. ",
   "pli-tv-kd13:36.4.46": "He’s purified of those offenses.” ",
   "pli-tv-kd13:36.4.47": "The third group of nine is finished. ",
-  "pli-tv-kd13:36.4.48": "The third chapter containing the collection of processes for the clearing of offenses entailing suspension is finished. ",
+  "pli-tv-kd13:36.4.48": "The third chapter on processes for the clearing of offenses entailing suspension is finished. ",
+  "pli-tv-kd13:36.4.49": "This is the summary: ",
+  "pli-tv-kd13:36.4.50": "“Unconcealed, one day, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
