--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1907,6 +1907,7 @@
   "pli-tv-kd13:36.4.51": "Two days, three days, and four days; ",
   "pli-tv-kd13:36.4.52": "Five days, a half-month, for ten, ",
   "pli-tv-kd13:36.4.53": "Offense, said the Great Sage. ",
+  "pli-tv-kd13:36.4.54": "And purifying, disrobing, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
