Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1908,6 +1908,8 @@
   "pli-tv-kd13:36.4.52": "Five days, a half-month, for ten, ",
   "pli-tv-kd13:36.4.53": "Offense, said the Great Sage. ",
   "pli-tv-kd13:36.4.54": "And purifying, disrobing, ",
+  "pli-tv-kd13:36.4.55": "Specified, two monks; ",
+  "pli-tv-kd13:36.4.56": "There both perceive accordingly, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
