--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1910,6 +1910,8 @@
   "pli-tv-kd13:36.4.54": "And purifying, disrobing, ",
   "pli-tv-kd13:36.4.55": "Specified, two monks; ",
   "pli-tv-kd13:36.4.56": "There both perceive accordingly, ",
+  "pli-tv-kd13:36.4.57": "And just the same for unsure. ",
+  "pli-tv-kd13:36.4.58": "And both see it as mixed, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
