Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1912,9 +1912,10 @@
   "pli-tv-kd13:36.4.56": "There both perceive accordingly, ",
   "pli-tv-kd13:36.4.57": "And just the same for unsure. ",
   "pli-tv-kd13:36.4.58": "And both see it as mixed, ",
+  "pli-tv-kd13:36.4.63": "Insane, and recitation, ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
-  "pli-tv-kd13:36.4.68": "This was their words for the longevity of the true Teachings. ",
-  "pli-tv-kd13:36.4.69": "The chapter containing the collection of processes for the clearing of offenses entailing suspension is finished. "
+  "pli-tv-kd13:36.4.68": "This was their words for the longevity of the true Teachings.” ",
+  "pli-tv-kd13:36.4.69": "The chapter on the processes for the clearing of offenses entailing suspension is finished. "
 }
