--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1257,7 +1257,7 @@
   "pli-tv-kd13:27.3.11": "is ejected for not making amends for an offense, ",
   "pli-tv-kd13:27.3.12": "or is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.3.13": "For one who’s ejected, the giving of the trial period is suspended. ",
-  "pli-tv-kd13:27.3.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.3.14": "If he’s readmitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.3.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.3.16": "And he’s to be given the trial period. ",
   "pli-tv-kd13:27.4.1": "“It may be that a monk undertaking the trial period disrobes. ",
