Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1290,7 +1290,7 @@
   "pli-tv-kd13:27.5.12": "is ejected for not making amends for an offense, ",
   "pli-tv-kd13:27.5.13": "or is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.5.14": "For one who’s ejected, the rehabilitation is suspended. ",
-  "pli-tv-kd13:27.5.15": "If he’s re-admitted, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.5.15": "If he’s readmitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.5.16": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.17": "The trial period that was given is valid. The trial period he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.18": "And he’s to be rehabilitated.” ",
