Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -599,7 +599,7 @@
   "pli-tv-kd10:6.3.33": "He’s skilled in the ways of clearing offenses. ",
   "pli-tv-kd10:6.3.34": "If one is sent away for one’s conduct, ",
   "pli-tv-kd10:6.3.35": "But once sent away one acts rightly, ",
-  "pli-tv-kd10:6.3.36": "There’s re-admittance for one who lives thus. ",
+  "pli-tv-kd10:6.3.36": "There’s readmittance for one who lives thus. ",
   "pli-tv-kd10:6.3.37": "This too he knows, the one skilled in analysis. ",
   "pli-tv-kd10:6.3.38": "Respectful of more senior monks, ",
   "pli-tv-kd10:6.3.39": "Yet whether junior, senior, or of middle standing, ",
