Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -540,7 +540,7 @@
   "pli-tv-kd10:5.14.4": "No-one should give their consent. ",
   "pli-tv-kd10:5.14.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd10:5.14.6": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd10:5.14.7": "This monk has recognized that he had committed an offense and was ejected. He’s now been re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
+  "pli-tv-kd10:5.14.7": "This monk has recognized that he had committed an offense and was ejected. He’s now been readmitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
   "pli-tv-kd10:5.14.8": "If it seems appropriate to the Sangha, let’s resolve this matter by unifying the Sangha. ",
   "pli-tv-kd10:5.14.9": "This is the motion. ",
   "pli-tv-kd10:5.14.10": "Please, Venerables, I ask the Sangha to listen. ",
