--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -525,7 +525,7 @@
   "pli-tv-kd10:5.12.13": "and this monk has committed it. ",
   "pli-tv-kd10:5.12.14": "He’s been ejected, ",
   "pli-tv-kd10:5.12.15": "for the legal procedure was legitimate, irreversible, and fit to stand. ",
-  "pli-tv-kd10:5.12.16": "But since he recognizes this, he should be re-admitted.” ",
+  "pli-tv-kd10:5.12.16": "But since he recognizes this, he should be readmitted.” ",
   "pli-tv-kd10:5.13.0": "8. Discussion of unity in the Sangha ",
   "pli-tv-kd10:5.13.1": "Soon afterwards the monks who had been siding with the ejected monk readmitted him. They then went to the monks who had ejected him and said, ",
   "pli-tv-kd10:5.13.2": "“This monk has recognized that he had committed an offense and was ejected. He’s now been readmitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
