Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -516,7 +516,7 @@
   "pli-tv-kd10:5.11.5": "for the legal procedure was legitimate, irreversible, and fit to stand.” ",
   "pli-tv-kd10:5.11.6": "He went to those who were siding with him and told them ",
   "pli-tv-kd10:5.11.7": "what he had been thinking, ",
-  "pli-tv-kd10:5.11.12": "adding, “Come, Venerables, please re-admit me.” ",
+  "pli-tv-kd10:5.11.12": "adding, “Come, Venerables, please readmit me.” ",
   "pli-tv-kd10:5.12.1": "They then took that monk to the Buddha, bowed, sat down, ",
   "pli-tv-kd10:5.12.2": "and told him ",
   "pli-tv-kd10:5.12.3": "what had happened, ",
