--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1329,7 +1329,7 @@
   "pli-tv-kd13:28.2.15": "The group of thirty-six is finished. ",
   "pli-tv-kd13:29.1.0": "5. The group of one hundred on the trial period ",
   "pli-tv-kd13:29.1.1": "“It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:29.1.2": "Being re-ordained, he doesn’t conceal them. ",
+  "pli-tv-kd13:29.1.2": "Being reordained, he doesn’t conceal them. ",
   "pli-tv-kd13:29.1.3": "He should be given the trial period. ",
   "pli-tv-kd13:29.1.4": "It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.5": "Being re-ordained, he conceals them. ",
