--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1338,7 +1338,7 @@
   "pli-tv-kd13:29.1.8": "Being reordained, he doesn’t conceal them. ",
   "pli-tv-kd13:29.1.9": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.1.10": "It may be that a monk commits a number of concealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:29.1.11": "Being re-ordained, he conceals them. ",
+  "pli-tv-kd13:29.1.11": "Being reordained, he conceals them. ",
   "pli-tv-kd13:29.1.12": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.1": "“It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.2": "both concealed and unconcealed, ",
