--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1346,7 +1346,7 @@
   "pli-tv-kd13:29.2.5": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.6": "It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.7": "both concealed and unconcealed, ",
-  "pli-tv-kd13:29.2.8": "and then disrobes. Being re-ordained, he doesn’t conceal those offenses he previously concealed, ",
+  "pli-tv-kd13:29.2.8": "and then disrobes. Being reordained, he doesn’t conceal those offenses he previously concealed, ",
   "pli-tv-kd13:29.2.9": "but conceals those offenses he previously didn’t conceal. ",
   "pli-tv-kd13:29.2.10": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.11": "It may be that a monk commits a number of offenses entailing suspension, ",
