Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1356,7 +1356,7 @@
   "pli-tv-kd13:29.2.15": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.16": "It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.17": "both concealed and unconcealed, ",
-  "pli-tv-kd13:29.2.18": "and then disrobes. Being re-ordained, he conceals all of them. ",
+  "pli-tv-kd13:29.2.18": "and then disrobes. Being reordained, he conceals all of them. ",
   "pli-tv-kd13:29.2.20": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.3.1": "“It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.3.2": "He’s aware of some of them, but not others. ",
