Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1388,7 +1388,7 @@
   "pli-tv-kd13:29.4.2": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.3": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:29.4.4": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:29.4.5": "He then disrobes. Being re-ordained and having remembered all of them, he conceals none of them. ",
+  "pli-tv-kd13:29.4.5": "He then disrobes. Being reordained and having remembered all of them, he conceals none of them. ",
   "pli-tv-kd13:29.4.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.4.8": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.4.9": "He remembers some of them, but not others. ",
