Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1401,7 +1401,7 @@
   "pli-tv-kd13:29.4.16": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.17": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:29.4.18": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:29.4.19": "He then disrobes. Being re-ordained and having remembered all of them, he conceals those offenses he previously remembered, ",
+  "pli-tv-kd13:29.4.19": "He then disrobes. Being reordained and having remembered all of them, he conceals those offenses he previously remembered, ",
   "pli-tv-kd13:29.4.20": "but not those he didn’t remember. ",
   "pli-tv-kd13:29.4.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.4.22": "It may be that a monk commits a number of offenses entailing suspension. ",
