--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1414,7 +1414,7 @@
   "pli-tv-kd13:29.5.2": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.3": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:29.5.4": "but not those he’s unsure of. ",
-  "pli-tv-kd13:29.5.5": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals none of them. ",
+  "pli-tv-kd13:29.5.5": "He then disrobes. Being reordained and having become sure of all of them, he conceals none of them. ",
   "pli-tv-kd13:29.5.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.5.8": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.5.9": "He’s sure of some of them, but unsure of others. ",
