--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1420,7 +1420,7 @@
   "pli-tv-kd13:29.5.9": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.10": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:29.5.11": "but not those he’s unsure of. ",
-  "pli-tv-kd13:29.5.12": "He then disrobes. Being re-ordained and having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
+  "pli-tv-kd13:29.5.12": "He then disrobes. Being reordained and having become sure of all of them, he doesn’t conceal those offenses he was previously sure of, ",
   "pli-tv-kd13:29.5.13": "but conceals those he was unsure of. ",
   "pli-tv-kd13:29.5.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.5.15": "It may be that a monk commits a number of offenses entailing suspension. ",
