--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1427,7 +1427,7 @@
   "pli-tv-kd13:29.5.16": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.17": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:29.5.18": "but not those he’s unsure of. ",
-  "pli-tv-kd13:29.5.19": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals those offenses he was previously sure of, ",
+  "pli-tv-kd13:29.5.19": "He then disrobes. Being reordained and having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:29.5.20": "but not those he was unsure of. ",
   "pli-tv-kd13:29.5.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.5.22": "It may be that a monk commits a number of offenses entailing suspension. ",
