--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1458,7 +1458,7 @@
   "pli-tv-kd13:30.1.22": "The group of one hundred on the trial period is finished. ",
   "pli-tv-kd13:31.1.0": "6. The group of four hundred on simultaneous probation with sending back to the beginning ",
   "pli-tv-kd13:31.1.1": "“It may be that a monk on probation commits a number of unconcealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:31.1.2": "Being re-ordained, he doesn’t conceal those offenses. ",
+  "pli-tv-kd13:31.1.2": "Being reordained, he doesn’t conceal those offenses. ",
   "pli-tv-kd13:31.1.3": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.4": "It may be that a monk on probation commits a number of unconcealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:31.1.5": "Being re-ordained, he conceals those offenses. ",
