--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1461,7 +1461,7 @@
   "pli-tv-kd13:31.1.2": "Being reordained, he doesn’t conceal those offenses. ",
   "pli-tv-kd13:31.1.3": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.4": "It may be that a monk on probation commits a number of unconcealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:31.1.5": "Being re-ordained, he conceals those offenses. ",
+  "pli-tv-kd13:31.1.5": "Being reordained, he conceals those offenses. ",
   "pli-tv-kd13:31.1.6": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.7": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.1.8": "It may be that a monk on probation commits a number of concealed offenses entailing suspension and then disrobes. ",
