--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1465,7 +1465,7 @@
   "pli-tv-kd13:31.1.6": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.7": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.1.8": "It may be that a monk on probation commits a number of concealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:31.1.9": "Being re-ordained, he doesn’t conceal those offenses. ",
+  "pli-tv-kd13:31.1.9": "Being reordained, he doesn’t conceal those offenses. ",
   "pli-tv-kd13:31.1.10": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.1.11": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.1.12": "It may be that a monk on probation commits a number of concealed offenses entailing suspension and then disrobes. ",
