--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1474,7 +1474,7 @@
   "pli-tv-kd13:31.1.15": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.1": "“It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.2": "both concealed and unconcealed, ",
-  "pli-tv-kd13:31.2.3": "and then disrobes. Being re-ordained, he conceals none of those offenses. ",
+  "pli-tv-kd13:31.2.3": "and then disrobes. Being reordained, he conceals none of those offenses. ",
   "pli-tv-kd13:31.2.5": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.2.6": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.7": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
