Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1505,7 +1505,7 @@
   "pli-tv-kd13:31.3.10": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:31.3.11": "He conceals the offenses he’s aware of, ",
   "pli-tv-kd13:31.3.12": "but not those he isn’t aware of. ",
-  "pli-tv-kd13:31.3.13": "He then disrobes. Being re-ordained and having found out about all of them, he doesn’t conceal those offenses he was previously aware of, ",
+  "pli-tv-kd13:31.3.13": "He then disrobes. Being reordained and having found out about all of them, he doesn’t conceal those offenses he was previously aware of, ",
   "pli-tv-kd13:31.3.14": "but conceals those he wasn’t aware of. ",
   "pli-tv-kd13:31.3.15": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.16": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
