Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1513,7 +1513,7 @@
   "pli-tv-kd13:31.3.18": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:31.3.19": "He conceals the offenses he’s aware of, ",
   "pli-tv-kd13:31.3.20": "but not those he isn’t aware of. ",
-  "pli-tv-kd13:31.3.21": "He then disrobes. Being re-ordained and having found out about all of them, he conceals those offenses he was previously aware of, ",
+  "pli-tv-kd13:31.3.21": "He then disrobes. Being reordained and having found out about all of them, he conceals those offenses he was previously aware of, ",
   "pli-tv-kd13:31.3.22": "but not those he wasn’t aware of. ",
   "pli-tv-kd13:31.3.23": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.24": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
