--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1520,7 +1520,7 @@
   "pli-tv-kd13:31.3.25": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.26": "He’s aware of some of them, but not others. ",
   "pli-tv-kd13:31.3.27": "He conceals the offenses he’s aware of, but not those he isn’t aware of. ",
-  "pli-tv-kd13:31.3.28": "He then disrobes. Being re-ordained and having found out about all of them, he conceals all of them. ",
+  "pli-tv-kd13:31.3.28": "He then disrobes. Being reordained and having found out about all of them, he conceals all of them. ",
   "pli-tv-kd13:31.3.30": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.31": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.32": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
