Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1534,7 +1534,7 @@
   "pli-tv-kd13:31.3.41": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.42": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.43": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:31.3.44": "He then disrobes. Being re-ordained and having remembered all the offenses, he doesn’t conceal those offenses he previously remembered, ",
+  "pli-tv-kd13:31.3.44": "He then disrobes. Being reordained and having remembered all the offenses, he doesn’t conceal those offenses he previously remembered, ",
   "pli-tv-kd13:31.3.45": "but conceals those he didn’t remember. ",
   "pli-tv-kd13:31.3.46": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.47": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
