Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1542,7 +1542,7 @@
   "pli-tv-kd13:31.3.49": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.50": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.51": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:31.3.52": "He then disrobes. Being re-ordained and having remembered all them, he conceals those offenses he previously remembered, ",
+  "pli-tv-kd13:31.3.52": "He then disrobes. Being reordained and having remembered all them, he conceals those offenses he previously remembered, ",
   "pli-tv-kd13:31.3.53": "but not those he didn’t remember. ",
   "pli-tv-kd13:31.3.54": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.55": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
