--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1550,7 +1550,7 @@
   "pli-tv-kd13:31.3.57": "He remembers some of them, but not others. ",
   "pli-tv-kd13:31.3.58": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:31.3.59": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:31.3.60": "He then disrobes. Being re-ordained and having remembered all of them, he conceals all of them. ",
+  "pli-tv-kd13:31.3.60": "He then disrobes. Being reordained and having remembered all of them, he conceals all of them. ",
   "pli-tv-kd13:31.3.62": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.63": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.64": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
