--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1572,7 +1572,7 @@
   "pli-tv-kd13:31.3.81": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:31.3.82": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:31.3.83": "but not those he’s unsure of. ",
-  "pli-tv-kd13:31.3.84": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals those offenses he was previously sure of, ",
+  "pli-tv-kd13:31.3.84": "He then disrobes. Being reordained and having become sure of all of them, he conceals those offenses he was previously sure of, ",
   "pli-tv-kd13:31.3.85": "but not those he was unsure of. ",
   "pli-tv-kd13:31.3.86": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.87": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
