Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
@@ -150,7 +150,7 @@
   "dn22:16.0": "4.4. Die Faktoren des Erwachens ",
   "dn22:16.1": "Dann meditiert da ein Mönch, indem er einen Aspekt der natürlichen Gesetzmäßigkeiten in Bezug auf die sieben Faktoren des Erwachens beobachtet. ",
   "dn22:16.2": "Und wie meditiert ein Mönch, indem er einen Aspekt der natürlichen Gesetzmäßigkeiten in Bezug auf die sieben Faktoren des Erwachens beobachtet? ",
-  "dn22:16.3": "Da versteht ein Mönch, wenn der Faktor des Erwachens Achtsamkeit in ihm ist: ‚In mir ist der Faktor des Erwachens Achtsamkeit.‘ Wenn der Faktor des Erwachens Achtsamkeit nicht in ihm ist, versteht er: ‚In mir ist nicht der Faktor des Erwachens Achtsamkeit.‘ Er versteht, wie der Faktor des Erwachens Achtsamkeit, wenn er nicht entstanden ist, entsteht; und wie der Faktor des Erwachens Achtsamkeit, wenn er entstanden ist, sich vollständig entwickelt. ",
+  "dn22:16.3": "Da versteht ein Mönch, wenn der Faktor des Erwachens Achtsamkeit in ihm ist: ‚In mir ist der Faktor des Erwachens Achtsamkeit.‘ Wenn der Faktor des Erwachens Achtsamkeit nicht in ihm ist, versteht er: ‚In mir ist nicht der Faktor des Erwachens Achtsamkeit.‘ Er versteht, wie der Faktor des Erwachens Achtsamkeit, wenn er nicht entstanden ist, entsteht; und wie der Faktor des Erwachens Achtsamkeit, wenn er entstanden ist, vollständig entwickelt wird. ",
   "dn22:16.4": "Wenn der Faktor des Erwachens Erforschung der Gesetzmäßigkeiten in ihm ist … ",
   "dn22:16.5": "Wenn der Faktor des Erwachens Energie in ihm ist … ",
   "dn22:16.6": "Wenn der Faktor des Erwachens Ekstase in ihm ist … ",
