Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.85:1.3": "„Wie ich die Lehre des Buddha verstehe, wird ein Mönch, der die Befleckungen aufgelöst hat, vernichtet und zerstört, wenn sein Körper auseinanderbricht, und besteht nach dem Tod nicht fort.“ ",
   "sn22.85:2.1": "Mehrere Mönche und Nonnen hörten davon. ",
   "sn22.85:2.3": "Sie gingen zu Yamaka und tauschten Willkommensgrüße mit ihm aus. ",
-  "sn22.85:2.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: "
+  "sn22.85:2.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: ",
+  "sn22.85:3.1": "„Ist es wirklich wahr, Yamaka, dass du solch einen schädlichen Irrglauben hast: "
 }
