Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1915,7 +1915,9 @@
   "pli-tv-kd13:36.4.59": "They see it as not light; ",
   "pli-tv-kd13:36.4.60": "And both see it as light. ",
   "pli-tv-kd13:36.4.61": "And just so one conceals, ",
+  "pli-tv-kd13:36.4.62": "And then with the thought of concealing; ",
   "pli-tv-kd13:36.4.63": "Insane, and recitation, ",
+  "pli-tv-kd13:36.4.64": "To the beginning, eighteen as to purity. ",
   "pli-tv-kd13:36.4.65": "The teachers of analytical statements, ",
   "pli-tv-kd13:36.4.66": "Who are the inspiration of Sri Lanka, ",
   "pli-tv-kd13:36.4.67": "The residents of the Mahāvihāra monastery—",
