Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -17,7 +17,7 @@
   "pli-tv-kd14:1.1.15": "This will affect people’s confidence …” ",
   "pli-tv-kd14:1.1.16": "After rebuking them … ",
   "pli-tv-kd14:1.1.17": "the Buddha gave a teaching and addressed the monks: ",
-  "pli-tv-kd14:1.1.18": "“You should not do legal procedures—",
+  "pli-tv-kd14:1.1.18": "“You shouldn’t do legal procedures—",
   "pli-tv-kd14:1.1.19": "condemnation, demotion, banishment, reconciliation, or ejection—against monks who are absent. ",
   "pli-tv-kd14:1.1.20": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd14:1.1.21": "An individual who speaks contrary to the Teaching; several people who speak contrary to the Teaching; a sangha that speaks contrary to the Teaching. ",
