Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -21,7 +21,7 @@
   "pli-tv-kd14:1.1.19": "condemnation, demotion, banishment, reconciliation, or ejection—against monks who are absent. ",
   "pli-tv-kd14:1.1.20": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd14:1.1.21": "An individual who speaks contrary to the Teaching; several people who speak contrary to the Teaching; a sangha that speaks contrary to the Teaching. ",
-  "pli-tv-kd14:1.1.22": "An individual who speaks in accordance with the Teaching; several people who speak in accordance with the Teaching; a sangha that speaks in accordance with the Teaching. ",
+  "pli-tv-kd14:1.1.22": "An individual who speaks in accordance with the Teaching; several people who speak in accordance with the Teaching; a sangha that speaks in accordance with the Teaching.” ",
   "pli-tv-kd14:2.1.0": "1.1 The group of nine on the dark side ",
   "pli-tv-kd14:2.1.1": "“An individual who speaks contrary to the Teaching persuades an individual who speaks in accordance with the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
   "pli-tv-kd14:2.1.2": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
