Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -32,7 +32,7 @@
   "pli-tv-kd14:2.1.7": "An individual who speaks contrary to the Teaching persuades a sangha that speaks in accordance with the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:2.1.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.9": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
-  "pli-tv-kd14:2.1.10": "“Several people who speak contrary to the Teaching persuade an individual who speaks in accordance with the Teaching—convince him, make him see, make him consider, show him, teach him: ",
+  "pli-tv-kd14:2.1.10": "Several people who speak contrary to the Teaching persuade an individual who speaks in accordance with the Teaching—convince him, make him see, make him consider, show him, teach him: ",
   "pli-tv-kd14:2.1.11": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.12": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.13": "Several people who speak contrary to the Teaching persuade several people who speak in accordance with the Teaching—convince them, make them see, make them consider, show them, teach them: ",
