Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -41,7 +41,7 @@
   "pli-tv-kd14:2.1.16": "Several people who speak contrary to the Teaching persuade a sangha that speaks in accordance with the Teaching—convince it, make it see, make it consider, show it, teach it: ",
   "pli-tv-kd14:2.1.17": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.18": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
-  "pli-tv-kd14:2.1.19": "“A sangha that speaks contrary to the Teaching persuades an individual who speaks in accordance with the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
+  "pli-tv-kd14:2.1.19": "A sangha that speaks contrary to the Teaching persuades an individual who speaks in accordance with the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
   "pli-tv-kd14:2.1.20": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.21": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.22": "A sangha that speaks contrary to the Teaching persuades several people who speak in accordance with the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
