Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -54,7 +54,7 @@
   "pli-tv-kd14:3.1.0": "1.2 The group of nine on the bright side ",
   "pli-tv-kd14:3.1.1": "“An individual who speaks in accordance with the Teaching persuades an individual who speaks contrary to the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
   "pli-tv-kd14:3.1.2": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.3": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
+  "pli-tv-kd14:3.1.3": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.4": "An individual who speaks in accordance with the Teaching persuades several people who speak contrary to the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
   "pli-tv-kd14:3.1.5": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:3.1.6": "If a legal issue is resolved like this, it is resolved legitimately by resolution face-to-face. ",
